--- a/deploy/charts/ray/values.yaml
+++ b/deploy/charts/ray/values.yaml
@@ -62,7 +62,11 @@ podTypes:
         # See https://docs.ray.io/en/master/advanced.html#dynamic-remote-parameters for an example of usage of custom resources in a Ray task.
         rayResources: {}
         # Optionally, set a node selector for this Pod type. See https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector
-        nodeSelector: {}
+        nodeSelector:
+          key: ray
+          operator: Equal
+          value: "false"
+          effect: NoExecute
 
         # tolerations for Ray pods of this podType
         #   ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
